fix(caliobase-ui): allow profile fields
